[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/image1.jpg" type="Texture" id=1]
[ext_resource path="res://panel.gd" type="Script" id=2]
[ext_resource path="res://skin_assets/Theme.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 264, 400 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Image" type="Sprite" parent="."]
position = Vector2( 264.6, 398.8 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Image"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Image/Area2D"]
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="Button_zoom_in" type="Button" parent="."]
margin_left = 16.0
margin_top = 32.0
margin_right = 48.0
margin_bottom = 64.0
theme = ExtResource( 3 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_zoom_out" type="Button" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 48.0
margin_bottom = 96.0
theme = ExtResource( 3 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_draw_rect" type="Button" parent="."]
margin_left = 16.0
margin_top = 104.0
margin_right = 48.0
margin_bottom = 136.0
theme = ExtResource( 3 )
text = "r"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_draw_text" type="Button" parent="."]
margin_left = 16.0
margin_top = 136.0
margin_right = 48.0
margin_bottom = 168.0
theme = ExtResource( 3 )
text = "T"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image_attribution" type="Label" parent="."]
margin_left = 8.0
margin_top = 584.0
margin_right = 490.0
margin_bottom = 598.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Image attribution: FLY:D via unsaplash (accessed 5/10/21)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zoom_factor_text" type="Label" parent="."]
margin_left = 56.0
margin_top = 32.0
margin_right = 128.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Zoom: 1x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoZoom" type="Node2D" parent="."]

[connection signal="input_event" from="Image/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="pressed" from="Button_zoom_in" to="." method="_on_Button_zoom_in_pressed"]
[connection signal="pressed" from="Button_zoom_out" to="." method="_on_Button_zoom_out_pressed"]
[connection signal="pressed" from="Button_draw_rect" to="." method="_on_Button_draw_rect_pressed"]
[connection signal="pressed" from="Button_draw_text" to="." method="_on_Button_draw_text_pressed"]
